# nautobot-apps-monorepo

./: .cookiecutter.json  .gitignore  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
development/: Dockerfile  docker-compose.base.yml  docker-compose.dev.yml  nautobot_config.py  towncrier_template.j2
docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: version_1.0.md
docs/dev/: contributing.md  dev_environment.md
docs/dev/code_reference/: api.md  package.md
templates/: Dockerfile_template.j2  docker-compose.override.yml.j2
